name:                tulen-api
version:             0.1.0.0
synopsis:            Tulen Engine public API
description:         Defines public API for a game engine called Tulen Engine.
homepage:            https://github.com/tulen-engine/tulen-engine/tulen-api#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Tulen.API
    Game.Tulen.API.Camera
    Game.Tulen.API.Landscape
    Game.Tulen.API.Math
    Game.Tulen.API.Mouse
    Game.Tulen.API.Resource
  build-depends:
      base                    >= 4.7        && < 5
    , reflex                  >= 0.5        && < 0.6
    , reflex-host             >= 0.3        && < 0.4
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    MultiParamTypeClasses
    TypeFamilies

source-repository head
  type:     git
  location: https://github.com/tulen-engine/tulen-engine
