name:                tulen-api
version:             0.1.0.0
synopsis:            Tulen Engine public API
description:         Defines public API for a game engine called Tulen Engine.
homepage:            https://github.com/tulen-engine/tulen-engine/tulen-api#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Tulen.API
    Game.Tulen.API.Camera
    Game.Tulen.API.KeyBoard
    Game.Tulen.API.Landscape
    Game.Tulen.API.Math
    Game.Tulen.API.Mouse
    Game.Tulen.API.Resource
    Game.Tulen.API.UI.Element
  build-depends:
      base                    >= 4.7        && < 5
    , containers              >= 0.5        && < 0.6
    , dependent-map           >= 0.2        && < 0.3
    , reflex                  >= 0.5        && < 0.6
    , reflex-host             >= 0.3        && < 0.4
    , these                   >= 0.7        && < 0.8
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FunctionalDependencies
    MultiParamTypeClasses
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/tulen-engine/tulen-engine
