name:                tulen-core
version:             0.1.0.0
synopsis:            Tulen Engine core implementation.
description:         Implements public API for a game engine called Tulen Engine.
homepage:            https://github.com/tulen-engine/tulen-engine/tulen-core#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:
  Data/Materials/*.xml
  Data/Shaders/GLSL/*.glsl
  Data/Shaders/HLSL/*.hlsl
  Data/Techniques/*.xml
  Data/Textures/*.png
  Data/Textures/*.xml
  Data/Textures/Barrens/*.png
  Data/Textures/Barrens/LICENSE

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Tulen.Core
    Game.Tulen.Internal.Camera
    Game.Tulen.Internal.Core
    Game.Tulen.Internal.Image
    Game.Tulen.Internal.Landscape
    Game.Tulen.Internal.Landscape.Mesh
    Game.Tulen.Internal.Landscape.Texture
    Game.Tulen.Internal.Landscape.Types
    Game.Tulen.Internal.Utils
  other-modules:
    Paths_tulen_core
  build-depends:
      base             >= 4.7     && < 5
    , containers       >= 0.5     && < 0.6
    , directory        >= 1.3     && < 1.4
    , exceptions       >= 0.8     && < 0.9
    , lens             >= 4.15    && < 4.16
    , linear           >= 1.20    && < 1.21
    , primitive        >= 0.6     && < 0.7
    , repa             >= 3.4     && < 3.5
    , StateVar         >= 1.1     && < 1.2
    , tulen-api        >= 0.1     && < 0.2
    , urho3d-haskell   >= 0.1     && < 0.2
    , vector           >= 0.11    && < 0.12
    , vector-th-unbox  >= 0.2     && < 0.3
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies

source-repository head
  type:     git
  location: https://github.com/tulen-engine/tulen-engine
