name:                tulen-core
version:             0.1.0.0
synopsis:            Tulen Engine core implementation.
description:         Implements public API for a game engine called Tulen Engine.
homepage:            https://github.com/tulen-engine/tulen-engine/tulen-core#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:
  Data/Materials/*.xml
  Data/Shaders/GLSL/*.glsl
  Data/Shaders/HLSL/*.hlsl
  Data/Techniques/*.xml
  Data/Textures/*.png
  Data/Textures/*.xml
  Data/Textures/Barrens/*.png
  Data/Textures/Barrens/LICENSE

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Tulen.Core
    Game.Tulen.Internal.API
    Game.Tulen.Internal.API.Camera
    Game.Tulen.Internal.API.Helpers
    Game.Tulen.Internal.API.KeyBoard
    Game.Tulen.Internal.API.Landscape
    Game.Tulen.Internal.API.Math
    Game.Tulen.Internal.API.Mouse
    Game.Tulen.Internal.API.UI.Element
    Game.Tulen.Internal.Camera
    Game.Tulen.Internal.Camera.Types
    Game.Tulen.Internal.Core
    Game.Tulen.Internal.Core.Types
    Game.Tulen.Internal.ExternalRef
    Game.Tulen.Internal.Image
    Game.Tulen.Internal.Landscape
    Game.Tulen.Internal.Landscape.Mesh
    Game.Tulen.Internal.Landscape.Texture
    Game.Tulen.Internal.Landscape.Types
    Game.Tulen.Internal.Monad
    Game.Tulen.Internal.Utils
  other-modules:
    Paths_tulen_core
  build-depends:
      base             >= 4.7     && < 5
    , bimap            >= 0.3     && < 0.4
    , containers       >= 0.5     && < 0.6
    , deepseq          >= 1.4     && < 1.5
    , directory        >= 1.3     && < 1.4
    , exceptions       >= 0.8     && < 0.9
    , lens             >= 4.15    && < 4.16
    , linear           >= 1.20    && < 1.21
    , mtl              >= 2.2     && < 2.3
    , primitive        >= 0.6     && < 0.7
    , reducers         >= 3.12    && < 3.13
    , reflex           >= 0.5     && < 0.6
    , reflex-host      >= 0.3     && < 0.4
    , repa             >= 3.4     && < 3.5
    , StateVar         >= 1.1     && < 1.2
    , stateWriter      >= 0.2     && < 0.3
    , stm              >= 2.4     && < 2.5
    , tulen-api        >= 0.1     && < 0.2
    , urho3d-bindgen   >= 0.1     && < 0.2
    , urho3d-haskell   >= 0.1     && < 0.2
    , vector           >= 0.11    && < 0.13
    , vector-th-unbox  >= 0.2     && < 0.3
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/tulen-engine/tulen-engine
