name:                tulen-demo
version:             0.1.0.0
synopsis:            Demo application for Tulen Engine
description:         Provides demo of Tulen Engine capabilities.
homepage:            https://github.com/tulen-engine/tulen-engine/tulen-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Tulen.Demo
  build-depends:
      base             >= 4.7     && < 5
    , tulen-api        >= 0.1     && < 0.2
    , tulen-core       >= 0.1     && < 0.2
  default-language:    Haskell2010
  default-extensions:
    RecordWildCards
    OverloadedStrings

executable tulen-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tulen-demo
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tulen-engine/tulen-engine
